--- a/styles.css
+++ b/styles.css
@@ -34,13 +34,17 @@ body {
     background-color: #f7f7f7;
 }
 
+.ck.ck-content * {
+    line-height: 1.35;
+}
+
 .ck.ck-content p {
-    margin-block: 0.25rem;
+    margin-block: 0;
 }
 
 .ck.ck-content ul,
 .ck.ck-content ol {
-    margin-block: 0.25rem;
+    margin-block: 0;
     padding-inline-start: 1.5rem;
 }
 
